--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "GPL-3.0",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
     "electron": "^1.7.9",
+    "express": "^4.16.2",
     "express-form-data": "^2.0.1",
     "express-formidable": "^1.0.0",
-    "method-override": "^2.3.10"
+    "method-override": "^2.3.10",
+    "mysql": "^2.15.0",
+    "pug": "^2.0.0-rc.4"
   }
 }
