--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
     "pug": "^2.0.0-rc.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
